manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pipeline-dep
  labels:
    app: pipeline
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pipeline
  template:
    metadata:
      labels:
        app: pipeline
    spec:
      containers:
        - name: pipeline
          image: prmsrswt/pipeline:0.2.1
          ports:
            - containerPort: 8080
