manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: pipeline-svc
  labels:
    app: pipeline
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    app: pipeline
