manifests/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - pipeline.saraswat.co
      secretName: pipeline-saraswat-com-frontend
  rules:
    - host: pipeline.saraswat.co
      http:
        paths:
          - path: /
            backend:
              serviceName: pipeline-svc
              servicePort: 80
